--- a/src/app/simple-login/SimpleLogin.module.css
+++ b/src/app/simple-login/SimpleLogin.module.css
@@ -1,11 +1,25 @@
 .container {
+  display: grid;
+  grid-template-columns: 19rem 1fr;
+  max-width: 100rem;
+}
+/* .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   background-color: #f5f5f5;
   font-family: "Roboto", sans-serif;
+} */
+
+.sideContainer {
+
+}
+
+.mainContent {
+  /* display: grid;
+  max-width: calc(-16px -19rem + 100vw);
+  grid-template-columns: 1fr min(46,875rem, 100%) 1fr; */
 }
 
 .greeting {
@@ -22,6 +36,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
+  margin: 0 auto;
 }
 
 .header {
